[tool.poetry]
name = "chaosface"
version = "2.0.0-beta.7"
description = "Chatbot and user interface for Twitch Controls Chaos"
authors = ["polysyl <polysyltwitch@gmail.com>", "blegas78"]
license = "GPL 3.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
twitchAPI = "*"
pyzmq = "*"
numpy = "*"
requests = "*"
fastapi = "*"
nicegui = "*"
cryptography = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
